# GD32F103C8T6_Example

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
Libraries/CMSIS/DeviceSupport/: gd32f10x.h  system_gd32f10x.c
Libraries/GD32F10x_standard_peripheral/Include/: gd32f10x_enet.h
Src/: gd32f10x_it.c  main.c  main.h  systick.c
